# usAnemometer

PCB/: designNotes.pptx
PCB/PDM_Receiver/: PDM_Receiver.kicad_dru  PDM_Receiver.kicad_pcb  PDM_Receiver.kicad_prl  PDM_Receiver.kicad_pro  PDM_Receiver.kicad_sch
PCB/PDM_Receiver/OutputFiles/: PDM_Receiver-B_Cu.gbr  PDM_Receiver-B_Mask.gbr  PDM_Receiver-B_Paste.gbr  PDM_Receiver-B_Silkscreen.gbr  PDM_Receiver-Edge_Cuts.gbr  PDM_Receiver-F_Cu.gbr  PDM_Receiver-F_Mask.gbr  PDM_Receiver-F_Paste.gbr  PDM_Receiver-F_Silkscreen.gbr  PDM_Receiver-In1_Cu.gbr  PDM_Receiver-In2_Cu.gbr  PDM_Receiver-NPTH.drl  PDM_Receiver-PTH.drl  PDM_Receiver-job.gbrjob
PCB/datasheet/: SPH8878LR5H-1_Lovato_DS - Shortcut.lnk  SparkFun_Analog_MEMS_Microphone_Breakout_SPH8878LR5H-1 - Shortcut.lnk  cusa-tr80-18-2400-th - Shortcut.lnk
PCB/mainBoard/mainBoard/: 491_Symbols.kicad_sym  fp-info-cache  mainBoard.kicad_pcb  mainBoard.kicad_prl  mainBoard.kicad_pro  mainBoard.kicad_sch
PCB/mainBoard/mainBoard/491_Footprints.pretty/: MIC_SPH0641LU4H-1.kicad_mod  R_0805_2012Metric.kicad_mod  SPH0655LM4H-1_KNO.kicad_mod
PCB/mainBoard/mainBoard/OutputFiles/: mainBoard-B_Cu.gbr  mainBoard-B_Mask.gbr  mainBoard-B_Paste.gbr  mainBoard-B_Silkscreen.gbr  mainBoard-Edge_Cuts.gbr  mainBoard-F_Cu.gbr  mainBoard-F_Mask.gbr  (+7 more)
PCB/simulation/: 39kHzDACtoSpeaker.asc  39kHzDACtoSpeaker.op.raw  39kHzDACtoSpeaker.plt  39kHzDACtoSpeaker.raw  PDM_V1.asc  PDM_V1.op.raw  PDM_V1.plt  PDM_V1.raw  THS4522.DSN  THS4522.LIB  THS4522.OLB  THS4522.OPJ  TransmissionPulse_Fully_Matched.asc  TransmissionPulse_Fully_Matched.op.raw  TransmissionPulse_Fully_Matched.plt
program/: PIO_asTime_ex.py  Readme.txt  main.py  main_r10_2sine_JKFF_PLL_PIO.py  main_r11_2sine_JKFF_PLL_PIO.py  main_r2.py  main_r3.py  main_r4_sigmaDelta.py  main_r4_sigmaDelta_dataStorage.py  main_r5_2sine_DFF.py  main_r6_2sine_PLL.py  main_r7_pdm_I2S.py  main_r8_2sine_JKFF.py  main_r9_2sine_JKFF_PLL.py  multicore.c.txt  pio_as_atimer.cpp
program/micropython_statemachine-main/examples/: cytron_maker_pi_pico_multicore_isa_s95.py
program/pdm/pcb/: README.md
program/playground/: readME.txt
program/playground/blink/: CMakeLists.txt
program/playground/king of cmake file/: CMakeLists.txt  readme.txt
program/playground/myADC_PLL/: CMakeLists.txt  myADC_PLL.c
program/playground/new_pio/: CMakeLists.txt  new_pio.c
